--- a/SistemaElBosquecito/SistemaElBosquecito/Properties/launchSettings.json
+++ b/SistemaElBosquecito/SistemaElBosquecito/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:38703",
-      "sslPort": 44357
+      "applicationUrl": "http://localhost:40275",
+      "sslPort": 44360
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "ElBosquecito": {
+    "SistemaElBosquecito": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
